--- a/Dapper.Extensions.UnitTest/App.config
+++ b/Dapper.Extensions.UnitTest/App.config
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <!--<add name="Default" connectionString="data source=localhost;initial catalog=Test;user id=sa;password=123456;" providerName="Dapper.Extensions.SqlServerProvider,Dapper.Extensions"/>-->
-    <add name="Default" connectionString="Server=localhost;Database=Test;User ID=root;Password=123456;pooling=false" providerName="Dapper.Extensions.MySqlProvider,Dapper.Extensions" />
+    <add name="Default" connectionString="data source=localhost;initial catalog=Test;user id=sa;password=123456;" providerName="Dapper.Extensions.SqlServerProvider,Dapper.Extensions"/>
+    <!--<add name="Default" connectionString="Server=localhost;Database=Test;User ID=root;Password=123456;pooling=false" providerName="Dapper.Extensions.MySqlProvider,Dapper.Extensions" />-->
     <!--<add name="Default" connectionString="Data Source=|DataDirectory|\\Sql\\Sample.db;Pooling=true;" providerName="Dapper.Extensions.SqliteProvider,Dapper.Extensions"/>-->
   </connectionStrings>
 
-  <system.data>
+  
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup><system.data>
     <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient"/>
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
-      <!--<add name="SQLite Data Provider" invariant="System.Data.SQLite" description="ADO.NET Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite"/>-->
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  </system.data></configuration>
