1.增加DynamicParameters参数方式 2.增加根据通知的属性变更状态的列表来生成update语句 3.增加手动指定更新字段名的方式来生成update语句

--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -47,6 +47,8 @@
     <Compile Include="IdentityKey.cs" />
     <Compile Include="Multikey.cs" />
     <Compile Include="NullableDataType.cs" />
+    <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="PropertyChangedModel.cs" />
     <Compile Include="RoleEntity.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="UserEntity.cs" />
